# audiobook-split-ffmpeg

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  audiobook-split-ffmpeg.py  audiobook_split_ffmpeg.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: python.yml
src/audiobook_split_ffmpeg/: __init__.py  cli.py  ffmpeg.py  ffprobe.py  model.py  util.py  workers.py
src/audiobook_split_ffmpeg_new/: cli.py  lib.py  model.py
tests/: 00_ffprobe_parse_test.py  01_chapters_to_workitems_test.py  02_workitem_to_ffmpeg_cmd_test.py  99_new_module_test.py  beep-nochap.m4a  beep.m4a  test_00_ffprobe_parse.py  test_02_workitem_to_ffmpeg_cmd.py  test_98_new_module.py  test_99_new_cli.py  test_data.py  testdata.py
