[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = 'audiobook-split-ffmpeg'
authors = [
    {name='Markus H (MawKKe)', email='markus@mawkke.fi'}
]
description = 'Split audiobook file into per-chapter files using chapter metadata and ffmpeg'
dynamic = ["version"]
license = {text = 'Apache License 2.0'}
readme = 'README.md'
requires-python = '>=3.8'
dependencies = []

#[template.plugins.default]
#src-layout = true

[project.optional-dependencies]
dev = [
  'ruff>=0.3',
  'pytest>=7',
  'pytest-cov>=4.1',
  'mypy>=1.10',
  'pre-commit>=3.5',
  'pip-tools>=7.4',
]

[tool.hatch.version]
path = 'src/audiobook_split_ffmpeg/__init__.py'

[tool.hatch.build.targets.sdist]
only-include = [
  'src',
  'tests',
]

[tool.hatch.build.targets.wheel]
packages = ["src/audiobook_split_ffmpeg", "src/audiobook_split_ffmpeg_new"]


[project.urls]
homepage = 'https://github.com/MawKKe/audiobook-split-ffmpeg'
Issues = 'https://github.com/MawKKe/audiobook-split-ffmpeg/issues'

[project.scripts]
audiobook-split-ffmpeg = 'audiobook_split_ffmpeg.cli:main'
audiobook-split-ffmpeg-ng = 'audiobook_split_ffmpeg_new.cli:main'

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
# Use single quotes rather than double quotes.
quote-style = 'single'
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ['E4', 'E7', 'E9', 'F', 'C901']

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
warn_return_any = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
